sites/all/themes/alhx/css/pages.css
/**
 * @file
 * Page Styling
 *
 * Style the markup found in page.tpl.php. Also includes some styling of
 * miscellaneous Drupal elements that appear in the $content variable, such as
 * ul.links, .pager, .more-link, etc.
 */


/*
 * Body
 */

html, body {
  min-height: 100%;
  color: #333;
  margin: 0;
  padding: 0;
  font: 16px Georgia, "Times New Roman", Times , Serif;
/*  background: url(assets/bg-sample.jpg) no-repeat center top #fff;*/
}

body {
  border-top: 10px solid #2c6bc6;
/*  border-left: 10px solid #2c6bc6;
  border-right: 10px solid #bc3f3f;*/
}

.splash, .splash img {
  width: 100%;
}

a:link, a:visited {
  color: #2c6bc6;
}

a:hover, a:active {
  text-decoration: none;
}

#page {
  overflow: auto;
  border-top: 10px solid #bc3f3f;
  padding: 0;
  margin: 0;
}

/*
 * The skip-link link will be completely hidden until a user tabs to the link.
 * See the element-focusable rule in system.base.css.
 */

#skip-link {
  margin: 0;
  padding: 0;
}
#skip-link a,
#skip-link a:visited {
  display: block;
  width: 100%;
  padding: 2px 0 3px 0;
  text-align: center;
  background-color: #666;
  color: #fff;
}

/*
 * Header
 */

#wrap {
  	min-height: 100%;
}

.contentWidth {
  width: 50%;
  max-width: 800px;
  margin-left: auto;
  margin-right: auto;
}
 

header, .mainNav {
  font: normal 1em/1.5em "futura-pt", "century gothic", "helvetica", "arial", "sans-serif";
}

header > div {
  padding-top: 2em;
  width: 10em;
}

/* @group Social Media / Contact Icons */

.contactIcons {
  margin: 1em auto;
  position: fixed;
  bottom: 0em;
  width: 10em;
}

.contactIcons ul {
  text-align: center;
  padding: 0;
}

.contactIcons ul li {
  font-size: 1.2em;
  display: inline;
}

.contactIcons a:link, .contactIcons a:visited {
  color: #333;
  text-decoration: none;
}

.contactIcons a:hover, .contactIcons a:active {
  color: #000;
}


/* @end */

/* @group Masthead */

/*.logoCol {
  float: left;
}*/

#masthead {
  text-align: right;
  margin-top: 1.5em;
  display: block;
  position: fixed;
  bottom: 1em;
  width: 200px;
}

/*#masthead > div {
  display: block;
  float: left;
}*/

#masthead h2, #masthead p {
/* 1em/1.5em */
  font-weight: normal;
  font-size: 1em;
  line-height: 1.5em;
  padding-top: 1.5em;
  margin: 0;
}

/* @end */


/* @group Overlay Header */

.fixed > div {
  z-index: 20;
  position: absolute;
  top: 0;
  left: 0;
}

.overlay {
  z-index: 21;
  color: #fff;
  -webkit-font-smoothing: antialiased;
}

.overlay .mainNav {
  border-color: #fff;
}

.overlay a:link, .overlay a:visited {
  color: #fff !important;
  border-color: #fff !important;
}

.overlay .mainNav a:hover, .overlay .mainNav a:active {
  text-decoration: underline !important;
  background-color: rgba(255,255,255, 0.2);
}

.overlay h1.logo a {
   background-image: url(assets/logo-w.png) !important;
}

/* @end */

/* @group Social Icons */

#masthead .socialIcons {
  font-family: 'sharetfpg' !important;
  text-align: center;
  font-variant: normal;
  text-transform: none;
  font-size: 1.4em;
}

ul.socialIcons {
  margin: 0;
  padding: .2em 0 0 0;
  list-style-type: none;
}

ul.socialIcons li {
  display: inline-block;
}

ul.socialIcons li a {
  border: none !important;
}

/* @end */

/* @group Header */

.header h1, .header h2 {
  margin: 0;
  padding: 0;
}

.header .logoCol {

}

.header {
  right: 75%;
  width: 200px;
  position: fixed;
  line-height: 1.5em !important;
}

.mainNav {
  width: 200px;
  left: 75%;
  position: fixed;
}

h1.logo {
  overflow: auto;
}

h1.logo span {
  text-align: center;
  display: block;
}

h1.logo span.subTitle {
  font-weight: normal !important;
  margin-top: 1.5em;
  font-size: 1em;
  line-height: 1.5em;
}

h1.logo a:link, h1.logo a:visited {
  color: #333;
/*  text-transform: uppercase;*/
  overflow: hidden;
/*  text-indent: -9999em;*/
  font-weight: bold;
  padding-top: 116px;
  display: block;
  background: url(assets/logo.png) no-repeat top center;
  text-decoration: none;
}

h1.logo a:hover span, h1.logo a:active span {
  text-decoration: underline !important;
}

.header h1 {
  font-size: 1em;
  font-weight: bold;
  margin: 0;
}

.header img {
  width: 100%;
  max-width: 900px;
  display: block;
  margin: 1em auto 0 auto;
}

/* @end */

/* @group Main Navigation */

.mainNav > div {
  padding: 2em 2em 2em 4em;
}

.mainNav {
/*  font: normal .8em/2em monaco, "futura-pt", futura;*/
}

.mainNav ul {
  padding: 0;
  margin: 0;
  float: right;
}

.mainNav li {
  list-style-type: none;
  text-align: right;
}

.mainNav a:link, .mainNav a:visited {
  display: block;
  text-decoration: none;
  font-size: 1em;
  color: #2c6bc6;
  font-weight: bold;
}

.mainNav li:last-child a {
  border-right: 0;
}

.mainNav a:hover, .mainNav a:active {
  color: #bc3f3f;
  text-decoration: underline;
}

.mainNav li a.active {
  text-decoration: underline;
}

/* @end */

/* @group Product Filters */

.productFilterBar {
  font: normal 1em/1.5em "futura-pt", "century gothic", "helvetica", "arial", "sans-serif";
/*  letter-spacing: .3em;*/
  font-weight: bold;
  padding: .5em 0;
  border-bottom: 2px solid #333;
}

.views-exposed-widget > * {
  display: inline-block;
}

.views-exposed-form > div{
  width: 100%;
  display: table;
}

.views-exposed-widget {
  float: none !important;
  display: table-cell;
  border-top: 2px solid #333;
  border-right: 2px solid #333;
  padding: .5em 1em !important;
}

.views-exposed-form .views-exposed-widget .form-submit {
  margin-top: 0em !important;
}

/* @end */

/* @group Filtered Product List */

.view-content {
  
}

.view-content .productItem {
  overflow: auto;
  border-bottom: 3px solid #333;
  padding-bottom: .5em;
  margin-bottom: .5em;
}

.view-content .productItem img {
  margin-right: .5em;
  float: left;
}

/* @end */
/* @group Content Column */

#content {
 padding-top: 2em;
}

#content > div {
  padding: 0 2em;
}

#content h2 {
  font: bold 1.6em/1.5em "futura-pt", "century gothic", "helvetica", "arial", "sans-serif";
}

#content ul {
  padding: 0;
}

#content article {
  line-height: 1.8em;
  padding: 0;
}

.region-highlighted {
}

.breadcrumb { /* The path to the current page in the form of a list of links */
}
.breadcrumb ol {
  margin: 0;
  padding: 0;
}
.breadcrumb li {
  display: inline;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

/* @end */

#name-and-slogan { /* Wrapper for website name and slogan */
  float: left;
}
#site-name { /* The name of the website */
  margin: 0;
  font-size: 2em;
  line-height: 1.5em;
}
#site-name a:link,
#site-name a:visited {
  color: #000;
  text-decoration: none;
}
#site-name a:hover,
#site-name a:focus {
  text-decoration: underline;
}

#site-slogan { /* The slogan (or tagline) of a website */
  margin: 0;
  font-size: 1em;
}

.region-header { /* Wrapper for any blocks placed in the header region */
  clear: both; /* Clear the logo */
}

/*
 * Main (container for everything else)
 */


#main {
}

/*
 * Content
 */
 
 h1.title, /* The title of the page */
h2.node-title, /* Title of a piece of content when it is given in a list of content */
h2.block-title, /* Block title */
h2.title, /* Comment section heading */
h2.comment-form, /* Comment form heading */
h3.title { /* Comment title */
  margin: 0;
}

tr.even { /* Some tables have rows marked even or odd. */
  /* background-color: #eee; */ /* Drupal core uses a #eee background */
}

tr.odd {
  /* background-color: #eee; */ /* Drupal core uses a #eee background */
}

div.messages { /* Important messages (status, warning, and error) for the user. See also the declarations in messages.css. */
  margin: 1.5em 0; /* Drupal core uses "6px 0" margin */
}
div.messages ul {
  margin-top: 0;
  margin-bottom: 0;
}

div.status { /* Normal priority messages */
}

div.warning,
tr.warning { /* Medium priority messages */
  /* border: 1px solid #f0c020; */ /* Drupal core uses: 1px solid #f0c020 */
}

div.error,
tr.error { /* High priority messages. See also the .error declaration below. */
}

.error { /* Errors that are separate from div.messages status messages. */
  /* color: #e55; */ /* Drupal core uses a #e55 background */
}

.warning { /* Warnings that are separate from div.messages status messages. */
  /* color: #e09010; */ /* Drupal core uses a #e09010 background */
}

.tabs { /* See also the tabs.css file. */
}

.region-help { /* Help text on a page */
}

.more-help-link { /* Link to more help */
}

.region-content { /* Wrapper for the actual page content */
}

ul.inline { /* List of links generated by theme_links() */
  display: inline;
  padding: 0;
}
ul.inline li {
  display: inline;
  list-style-type: none;
  padding: 0; /* LTR */
}

span.field-label { /* The inline field label used by the Fences module */
  padding: 0 1em 0 0; /* LTR */
}

.item-list .pager { /* A list of page numbers when more than 1 page of content is available */
  padding: 0;
}
.item-list .pager li { /* Each page number in the pager list */
  padding: 0 0.5em;
}

.feed-icon { /* The link to the RSS or Atom feed for the current list of content */
}

.more-link { /* Aggregator, blog, and forum more link */
}

/*
 * First sidebar (on left in LTR languages, on right in RTL)
 *
 * Remember to NOT add padding or margin to your .region-sidebar-first
 * (see the layout.css file.)
 */

.region-sidebar-first {
}

/*
 * Second sidebar (on right in LTR languages, on left in RTL)
 *
 * Remember to NOT add padding or margin to your .region-sidebar-second
 * (see the layout.css file.)
 */

.region-sidebar-second {
}

/* @group Footer */

#footer {
  font: normal 1em/1.5em "futura-pt", "century gothic", "helvetica", "arial", "sans-serif";
  clear: both;
  text-align: center;
}

footer {
  margin-top: 4em;
  border-top: 1px solid #2c6bc6;
  padding-top: 1px;
}

footer > div {
  border-top: 1px solid #bc3f3f;
  margin-bottom: 3em;
}

/* @end */

/*
 * Page bottom
 */

.region-bottom { /* Wrapper for any blocks placed in the page bottom region */
}

